告知ページの修正・その他全体調整

--- a/_posts/2024-07-18-notice.md
+++ b/_posts/2024-07-18-notice.md
@@ -29,7 +29,7 @@ background: '/img/posts/06.jpg'
 ### 申込期限
 - 2024年8月16日（金）
 ### 問合せ
-- 問合せフォーム（準備中）
+- 山本琢磨（兵庫医科大学法医学教室） shakai.wakate [at] gmail.com
 ### タイムテーブル
 - 12:10　趣旨説明
 - 12:15　演者による講演
@@ -54,7 +54,7 @@ background: '/img/posts/06.jpg'
 医療機関における法律問題　―医療訴訟、クレーム対応と応招義務、ハラスメント―
 #### 発表要旨
 医療機関における法律問題は多岐にわたるが、医療訴訟はさほど多くなく、我が国の医療訴訟は決して増加しているわけではない。1992年以降から2004年までは、医療訴訟（民事）は増加傾向にあるが、その後減少傾向に転じ、現在では年間800件程度を推移している。また、患者側（原告）の勝訴率は減少傾向にあり、一般的な民事訴訟が85％程度（証人尋問を要するような訴訟でも65％程度）であるのに対し、医療訴訟の原告勝訴率はここ数年20％を下回っている。  
-　しかし、医療機関に対しては、治療が奏功しなかった場合のクレームや、スタッフの接遇をめぐるクレームが散見される。わが国の医師には応招義務（医師法19条1項）があり、正当な事由がなく、患者からの診察・治療の求め拒むことができない。そのため、クレームを受けながらも診療に従事せざるを得ない状況がある。もっとも、厚生労働省は令和元年12月に通知を発し、医師の働き方改革に配慮しつつ、患者の診察・治療の求めを拒める正当事由を整理した。なお、応招義務は明治6年から存在する義務であり、諸外国には見られない特殊な義務である。
+　しかし、医療機関に対しては、治療が奏功しなかった場合のクレームや、スタッフの接遇をめぐるクレームが散見される。わが国の医師には応招義務（医師法19条1項）があり、正当な事由がなく、患者からの診察・治療の求め拒むことができない。そのため、クレームを受けながらも診療に従事せざるを得ない状況がある。もっとも、厚生労働省は令和元年12月に通知を発し、医師の働き方改革に配慮しつつ、患者の診察・治療の求めを拒める正当事由を整理した。なお、応招義務は明治6年から存在する義務であり、諸外国には見られない特殊な義務である。  
 　医療機関や大学等の研究機関では、著作権、特許権といった知的財産権も重要な関心事であるがが、ハラスメントや懲戒処分も法的に重大な問題となっている。とくに類型的に、パワーハラスメント、セクシュアルハラスメントが多く、これに加え、医療機関では女性スタッフに対するマタニティハラスメントが、また大学等の研究機関ではアカデミックハラスメントが見られる。ハラスメントに対しては、所属機関内でハラスメント認定のための手続が行われ、ハラスメントが認定されると懲戒処分等がなされる場合がある。法律家が関与しない医療機関等では、対象者（推定加害者）の弁明の機会を認めないところもあるので注意が必要である。  
 　医療訴訟であれ、ハラスメント手続や懲戒手続であれ、証拠に基づいて事実認定が行われる。証拠となるものは様々あり、契約書、録音・録画資料のほか、当事者や関係者、目撃者等の供述等あらゆるものが証拠となる。医療訴訟においては、これらのほか、診療記録（カルテ）、説明文書、同意書や、診療ガイドラインや医学論文も証拠となりうる。  
 
