20250711フォーラムに向けた更新
登録フォームは未反映

--- a/_posts/2025-06-11-notice.md
+++ b/_posts/2025-06-11-notice.md
@@ -34,7 +34,7 @@ background: '/img/posts/06.jpg'
 
 ### 申込方法
 - 事前登録制：下記フォームより、お申込みください。
-  - → [<u>【登録フォーム】</u>]()※後日更新予定
+  - → [<u>【登録フォーム】</u>]()※後日更新
 
 ### 申込期限
 - 2025年7月8日（火）
