登録フォームのURL反映

--- a/_posts/2025-06-11-notice.md
+++ b/_posts/2025-06-11-notice.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "第14回社会医学若手フォーラム（7月11日）のご案内"
+title: "第15回社会医学若手フォーラム（7月11日）のご案内"
 subtitle: "講演者: 古橋　寛子氏"
 date: 2025-06-11 09:00:00 +0900
 background: '/img/posts/06.jpg'
@@ -34,7 +34,7 @@ background: '/img/posts/06.jpg'
 
 ### 申込方法
 - 事前登録制：下記フォームより、お申込みください。
-  - → [<u>【登録フォーム】</u>]()※後日更新
+  - → [<u>【登録フォーム】</u>](https://forms.gle/2oPxoJxfNTjaqrFy9)
 
 ### 申込期限
 - 2025年7月8日（火）
