--- a/_posts/2025-08-06-notice.md
+++ b/_posts/2025-08-06-notice.md
@@ -1,31 +1,60 @@
 ---
 layout: post
 title: "第16回社会医学若手フォーラム（10月30日）のご案内"
-subtitle: "講演者: 古橋　寛子氏"
+subtitle: "講演者: 山本　英紀氏"
 date: 2025-08-06 09:00:00 +0900
 background: '/img/posts/06.jpg'
 ---
-第16回社会医学若手フォーラムは、第84回日本公衆衛生学会学術総会の**第10会場：自由集会(902)「社会医学若手フォーラム」**として開催いたします。  
-詳細が決まり次第、本ページでご連絡いたします。  
+
+これまで社会医学若手フォーラムは、2021年6月の第1回からオンラインを中心に15回開催して参りました。  
+第16回社会医学若手フォーラムは、第84回日本公衆衛生学会総会の自由集会26として対面開催いたします。  
+
+今回の集いでは、 `行政の取組と公衆衛生学分野の現場・研究における取組について` というテーマを設定して、参加者の皆様とディスカッションする機会を計画しております。  
+山本英紀さん（自治医科大学・教授）に厚生労働省や環境省で携わった経験についてご紹介いただき、参加者の皆様との意見交換を通して、行政・現場・研究での役割について考えていきたいと思います（ファシリテーター：下敷領一平）。  
+社会医学に携わる若手（研究者、医療従事者、行政職員）にとって、本フォーラムが、他分野を知る機会、分野横断的な交流の場になることを期待しております。  
+
 
 ## 開催概要
 
 ### 日時
-- 2025年10月31日（木） 18:00-19:30
-- 第84回日本公衆衛生学会総会　第10会場：自由集会(902)「社会医学若手フォーラム」
+
+- 2025年10月30日（木） 18:00-19:30
+- 第84回日本公衆衛生学会総会　自由集会26
 
 ### 場所
+
 - [第84回日本公衆衛生学会総会](https://plaza.umin.ac.jp/~jsph84/)
-- 場所：[グランシップ（静岡県コンベンションアーツセンター）](https://www.granship.or.jp/visitors/parking/)
+- 場所：[グランシップ（静岡県コンベンションアーツセンター）](https://www.granship.or.jp/visitors/parking/) 第10会場（9階902）
 
 ### 参加費
+
 - 無料
 
 ### 参加申込
-- 不要（途中入退室自由）
+
+- 当日参加も可能ですが、会場収容人数の都合上、事前申込とさせていただいております。
+- 下記フォームより、お申込みください。
+  - → [<u>【登録フォーム】</u>](https://forms.gle/QmmC6Nw58dj4m6hPA)
+- 
 
 ### 内容
-- Coming soon...
+
+1. 健康づくり
+
+    1. 特定健診・保健指導の導入時の議論  
+    →　生活習慣病予防のハイリスクアプローチとして、誰にどのような介入をすべきか。  
+　　その上で、どのような科学的知見が必要か。
+    2. 健康日本２１（第３次）  
+    →　指標を踏まえた、都道府県や市町村の取組の在り方  
+　　なぜ、取り組みが必ずしも進んでいないのに、健康寿命が延びるのか。
+
+2. エコチル調査の調査期間を延長（１３歳以降も追跡）する際の議論  
+→　化学物質の健康影響に関する疫学調査の結果をどのように対策に活用することが考えられるか。  
+　　（低濃度慢性暴露や、暴露を避けらないものや、使用するメリットがある化学物質との向き合い方）
+
+3. 自治医科大学の卒業生のキャリアパスの充実に向けた議論  
+→　日本の医療提供体制において総合診療専門医の役割はどのようなものか。  
+　　（臓器別・分野別の専門医と、総合診療専門医の関係）
 
 公衆衛生学会にご参加予定の方はお気軽にお越し下さい。  
 皆様と静岡でお会いできることを楽しみにしております。  
