自由集会の記載情報を微修正（10/2 下敷領先生のメールを反映）

--- a/_posts/2025-08-06-notice.md
+++ b/_posts/2025-08-06-notice.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title: "第16回社会医学若手フォーラム（10月30日）のご案内"
-subtitle: "第84回日本公衆衛生学会総会：自由集会26"
+subtitle: "ファシリテーター：下敷領　一平氏"
 date: 2025-08-06 09:00:00 +0900
 background: '/img/posts/06.jpg'
 ---
 
 これまで社会医学若手フォーラムは、2021年6月の第1回からオンラインを中心に15回開催して参りました。  
-第16回社会医学若手フォーラムは、第84回日本公衆衛生学会総会の自由集会26として対面開催いたします。  
+第16回社会医学若手フォーラムは、第84回日本公衆衛生学会総会の自由集会26として、**10/30(木)静岡で対面開催** いたします。  
 
 今回の集いでは、 `行政の取組と公衆衛生学分野の現場・研究における取組について` というテーマを設定して、参加者の皆様とディスカッションする機会を計画しております。  
 社会医学に携わる若手（研究者、医療従事者、行政職員）にとって、本フォーラムが、他分野を知る機会、分野横断的な交流の場になることを期待しております。  
@@ -34,9 +34,11 @@ background: '/img/posts/06.jpg'
 - 当日参加も可能ですが、会場収容人数の都合上、事前申込とさせていただいております。
 - 下記フォームより、お申込みください。
   - → [<u>【登録フォーム】</u>](https://forms.gle/QmmC6Nw58dj4m6hPA)
-- 
 
 ### 内容
+
+- ファシリテーター：下敷領　一平氏（[長崎大学](https://www.med.nagasaki-u.ac.jp/cm/staff/)） 【[researchmap](https://researchmap.jp/3ri315)】
+- テーマ：行政の取組と公衆衛生学分野の現場・研究における取組について
 
 公衆衛生学会にご参加予定の方はお気軽にお越し下さい。  
 皆様と静岡でお会いできることを楽しみにしております。  
