ページタイトルの微修正

--- a/_posts/2025-08-06-notice.md
+++ b/_posts/2025-08-06-notice.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "第16回社会医学若手フォーラム（10月30日）のご案内"
-subtitle: "ファシリテーター：下敷領　一平氏"
+title: "第16回社会医学若手フォーラムのご案内"
+subtitle: "10/30（木）静岡にて対面開催"
 date: 2025-08-06 09:00:00 +0900
 background: '/img/posts/06.jpg'
 ---
