ディスカッションする機会を計画→ディスカッションする内容を計画

--- a/_posts/2025-08-06-notice.md
+++ b/_posts/2025-08-06-notice.md
@@ -9,7 +9,7 @@ background: '/img/posts/06.jpg'
 これまで社会医学若手フォーラムは、2021年6月の第1回からオンラインを中心に15回開催して参りました。  
 第16回社会医学若手フォーラムは、第84回日本公衆衛生学会総会の自由集会26として、**10/30(木)静岡で対面開催** いたします。  
 
-今回の集いでは、 `行政の取組と公衆衛生学分野の現場・研究における取組について` というテーマを設定して、参加者の皆様とディスカッションする機会を計画しております。  
+今回の集いでは、 `行政の取組と公衆衛生学分野の現場・研究における取組について` というテーマを設定して、参加者の皆様とディスカッションする内容を計画しております。  
 社会医学に携わる若手（研究者、医療従事者、行政職員）にとって、本フォーラムが、他分野を知る機会、分野横断的な交流の場になることを期待しております。  
 
 
