画像修正、引用元追加

--- a/_posts/2026-01-13-notice.md
+++ b/_posts/2026-01-13-notice.md
@@ -75,12 +75,8 @@ background: '/img/posts/06.jpg'
 労働衛生工学を専門とし、アスベスト等の粉じん測定手法、粉じん対策で使用する呼吸用保護具・一般環境で使用するマスクの研究に携わる。工学博士。現職は、環境管理センター技術部長、高知大学医学部客員講師。「マツコの知らない世界」（TBS）、「あさイチ」（NHK）、New York Times、朝日新聞などマスクに関する情報発信多数。
 
 <figure>
-<img src="/img/pages/20260113/tv.jpg" alt="TBS「マツコの知らない世界」（2014）" loading="lazy" title="TBS「マツコの知らない世界」（2014）">
-<figcaption>TBS「マツコの知らない世界」（2014）</figcaption>
-</figure>
-<figure>
-<img src="/img/pages/20260113/newspaper_640.jpg" alt="朝日新聞「天声人語」（2019年）" loading="lazy" title="朝日新聞「天声人語」（2019年）">
-<figcaption>朝日新聞「天声人語」（2019年）</figcaption>
+<img src="/img/pages/20260113/tv_r.jpg" alt="TBS「マツコの知らない世界」（2014）" loading="lazy" title="TBS「マツコの知らない世界」（2014）">
+<figcaption><a href="https://www.tbs.co.jp/matsuko-sekai/old/20141209.html" target="_blank" rel="noopener noreferrer">TBS「マツコの知らない世界」（2014年12月9日放送：「マツコの知らないマスクの世界」）</a></figcaption>
 </figure>
 
 #### 演題名
